# Drawing-App

./: CMakeLists.txt  DrawingApp.pro  README.md
resources/: resources.qrc
resources/icons/: index.url  placeholder.txt  readme.txt
src/: brushengine.cpp  brushengine.h  canvas.cpp  canvas.h  colorpicker.cpp  colorpicker.h  commandhistory.cpp  commandhistory.h  filemanager.cpp  filemanager.h  layer.cpp  layer.h  layermanager.cpp  layermanager.h  main.cpp  mainwindow.cpp  mainwindow.h
src/commands/: drawcommand.cpp  drawcommand.h  layercommand.cpp  layercommand.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  newdocumentdialog.cpp  newdocumentdialog.h  preferencesdialog.cpp  preferencesdialog.h
src/filters/: blurfilter.cpp  blurfilter.h  coloradjustfilter.cpp  coloradjustfilter.h  filterbase.cpp  filterbase.h  sharpenfilter.cpp  sharpenfilter.h
src/tools/: brushtool.cpp  brushtool.h  calligraphytool.cpp  calligraphytool.h  ellipsetool.cpp  ellipsetool.h  erasertool.cpp  erasertool.h  filltool.cpp  filltool.h  linetool.cpp  linetool.h  penciltool.cpp  penciltool.h  pentool.cpp  pentool.h  polygontool.cpp  polygontool.h  rectangletool.cpp  rectangletool.h  selecttool.cpp  selecttool.h  spraytool.cpp  spraytool.h  texttool.cpp  texttool.h  tool.cpp  tool.h
src/widgets/: brushpreview.cpp  brushpreview.h  colorpalette.cpp  colorpalette.h  colorwheel.cpp  colorwheel.h  layerwidget.cpp  layerwidget.h  simplecolorpicker.cpp  simplecolorpicker.h  tooloptionswidget.cpp  tooloptionswidget.h
